--- a/pom.xml
+++ b/pom.xml
@@ -1,321 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>cn.bhshare</groupId>
-	<artifactId>kg</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>kg</name>
-	<description>KG for Spring Boot</description>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>cn.bhshare</groupId>
+    <artifactId>kg</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>kg</name>
+    <description>KG for Spring Boot</description>
 
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>1.3.2</version>
-		</dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-			<version>2.7.9</version>
-		</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.7.9</version>
+        </dependency>
 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>com.github.subchen</groupId>
-			<artifactId>jetbrick-template-springmvc</artifactId>
-			<version>2.1.6</version>
-		</dependency>
+        <dependency>
+            <groupId>com.github.subchen</groupId>
+            <artifactId>jetbrick-template-springmvc</artifactId>
+            <version>2.1.6</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.mybatis.generator</groupId>-->
-<!--			<artifactId>mybatis-generator-core</artifactId>-->
-<!--			<version>1.3.5</version>-->
-<!--		</dependency>-->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+        </dependency>
+        <!--数据导出excel-->
+        <!--		<dependency>-->
+        <!--			<groupId>io.github.biezhi</groupId>-->
+        <!--			<artifactId>excel-plus</artifactId>-->
+        <!--			<version>1.0.2</version>-->
+        <!--		</dependency>-->
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+            <scope>true</scope>
+        </dependency>
+        <dependency>
+            <!-- neo4j -->
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>1.5.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.6.2</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
-		<dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<version>2.4</version>
-			<classifier>jdk15</classifier>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.54</version>
-		</dependency>
-		<!--数据导出excel-->
-<!--		<dependency>-->
-<!--			<groupId>io.github.biezhi</groupId>-->
-<!--			<artifactId>excel-plus</artifactId>-->
-<!--			<version>1.0.2</version>-->
-<!--		</dependency>-->
-		<!--热部署-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional>
-			<scope>true</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-		<!--<dependency>-->
-			<!--<groupId>javax.mail</groupId>-->
-			<!--<artifactId>mail</artifactId>-->
-			<!--<version>1.5.0-b01</version>-->
-		<!--</dependency>-->
+    </dependencies>
 
-		<dependency>
-			<!-- neo4j -->
-			<groupId>org.neo4j.driver</groupId>
-			<artifactId>neo4j-java-driver</artifactId>
-			<version>1.5.0</version>
-		</dependency>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptors>
+                        <descriptor>package.xml</descriptor>
+                    </descriptors>
+                    <outputDirectory>${project.build.directory}/dist/</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-<!--		<dependency>-->
-<!--			<groupId>JavaMD5</groupId>-->
-<!--			<artifactId>JavaMD5</artifactId>-->
-<!--			<version>1.0</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>${basedir}/lib/JavaMD5.jar</systemPath>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>mail</groupId>-->
-<!--			<artifactId>mail</artifactId>-->
-<!--			<version>1.0</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>${basedir}/lib/mail.jar</systemPath>-->
-<!--		</dependency>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>cn.bhshare.kg.KgApplication</mainClass>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                        <manifestEntries>
+                            <Class-Path>resources/</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                    <!--从classes下计算排除-->
+                    <excludes>
+                        <exclude>/cache/**</exclude>
+                        <exclude>/static/**</exclude>
+                        <exclude>/templates/**</exclude>
+                        <exclude>/upload/**</exclude>
+                        <!--&lt;!&ndash;<exclude>/*.*</exclude>&ndash;&gt;-->
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>cn.bhshare.kg.KgApplication</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
 
-
-	</dependencies>
-
-
-
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<appendAssemblyId>false</appendAssemblyId>
-					<descriptors>
-						<descriptor>package.xml</descriptor>
-					</descriptors>
-					<outputDirectory>${project.build.directory}/dist/</outputDirectory>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>cn.bhshare.kg.KgApplication</mainClass>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-						</manifest>
-						<manifestEntries>
-							<Class-Path>resources/</Class-Path>
-						</manifestEntries>
-					</archive>
-					<!--从classes下计算排除-->
-					<excludes>
-						<exclude>/cache/**</exclude>
-						<exclude>/static/**</exclude>
-						<exclude>/templates/**</exclude>
-						<exclude>/upload/**</exclude>
-						<!--&lt;!&ndash;<exclude>/*.*</exclude>&ndash;&gt;-->
-					</excludes>
-				</configuration>
-			</plugin>
-<!--		</plugins>-->
-<!--		<plugins>-->
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<mainClass>cn.bhshare.kg.KgApplication</mainClass>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-
-	</build>
-<!--	<build>-->
-<!--		&lt;!&ndash; jar包名 &ndash;&gt;-->
-<!--		<finalName>${project.artifactId}</finalName>-->
-<!--		<plugins>-->
-<!--			&lt;!&ndash; 分离lib &ndash;&gt;-->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-dependency-plugin</artifactId>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>copy-dependencies</id>-->
-<!--						<phase>package</phase>-->
-<!--						<goals>-->
-<!--							<goal>copy-dependencies</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							&lt;!&ndash; 依赖包输出目录，将来不打进jar包里 &ndash;&gt;-->
-<!--							<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
-<!--							<excludeTransitive>false</excludeTransitive>-->
-<!--							<stripVersion>false</stripVersion>-->
-<!--							<includeScope>runtime</includeScope>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-<!--			&lt;!&ndash; copy资源文件 &ndash;&gt;-->
-<!--			<plugin>-->
-<!--				<artifactId>maven-resources-plugin</artifactId>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>copy-resources</id>-->
-<!--						<phase>package</phase>-->
-<!--						<goals>-->
-<!--							<goal>copy-resources</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<resources>-->
-<!--								<resource>-->
-<!--									<directory>src/main/resources</directory>-->
-<!--									<filtering>false</filtering>-->
-<!--								</resource>-->
-<!--							</resources>-->
-<!--							<outputDirectory>${project.build.directory}/resources</outputDirectory>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-<!--			&lt;!&ndash; 打jar包时忽略配置文件 &ndash;&gt;-->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-jar-plugin</artifactId>-->
-<!--				<configuration>-->
-<!--					<excludes>-->
-<!--						<exclude>**/*.yml</exclude>-->
-<!--						<exclude>**/*.xml</exclude>-->
-<!--					</excludes>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-<!--			&lt;!&ndash; spring boot repackage &ndash;&gt;-->
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--				<configuration>-->
-<!--					<mainClass>cn.bhshare.kg.KgApplication</mainClass>-->
-<!--					<layout>ZIP</layout>-->
-<!--					<includes>-->
-<!--						<include>-->
-<!--							<groupId>non-exists</groupId>-->
-<!--							<artifactId>non-exists</artifactId>-->
-<!--						</include>-->
-<!--					</includes>-->
-<!--				</configuration>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<goals>-->
-<!--							<goal>repackage</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-
-<!--			&lt;!&ndash;添加mybatis generator maven插件&ndash;&gt;-->
-<!--			&lt;!&ndash;<plugin>&ndash;&gt;-->
-<!--				&lt;!&ndash;<groupId>org.mybatis.generator</groupId>&ndash;&gt;-->
-<!--				&lt;!&ndash;<artifactId>mybatis-generator-maven-plugin</artifactId>&ndash;&gt;-->
-<!--				&lt;!&ndash;<version>1.3.5</version>&ndash;&gt;-->
-<!--				&lt;!&ndash;<configuration>&ndash;&gt;-->
-<!--					&lt;!&ndash;&lt;!&ndash;generatorConfig.xml位置&ndash;&gt;&ndash;&gt;-->
-<!--					&lt;!&ndash;<configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>&ndash;&gt;-->
-<!--					&lt;!&ndash;<verbose>true</verbose>&ndash;&gt;-->
-<!--					&lt;!&ndash;<overwrite>true</overwrite>&ndash;&gt;-->
-<!--				&lt;!&ndash;</configuration>&ndash;&gt;-->
-<!--				&lt;!&ndash;<executions>&ndash;&gt;-->
-<!--					&lt;!&ndash;<execution>&ndash;&gt;-->
-<!--						&lt;!&ndash;<id>Generate MyBatis Artifacts</id>&ndash;&gt;-->
-<!--						&lt;!&ndash;<goals>&ndash;&gt;-->
-<!--							&lt;!&ndash;<goal>generate</goal>&ndash;&gt;-->
-<!--						&lt;!&ndash;</goals>&ndash;&gt;-->
-<!--						&lt;!&ndash;<phase>generate-sources</phase>&ndash;&gt;-->
-<!--					&lt;!&ndash;</execution>&ndash;&gt;-->
-<!--				&lt;!&ndash;</executions>&ndash;&gt;-->
-<!--				&lt;!&ndash;&lt;!&ndash;此处必须添加mysql驱动包&ndash;&gt;&ndash;&gt;-->
-<!--				&lt;!&ndash;<dependencies>&ndash;&gt;-->
-<!--					&lt;!&ndash;<dependency>&ndash;&gt;-->
-<!--						&lt;!&ndash;<groupId>mysql</groupId>&ndash;&gt;-->
-<!--						&lt;!&ndash;<artifactId>mysql-connector-java</artifactId>&ndash;&gt;-->
-<!--						&lt;!&ndash;<scope>runtime</scope>&ndash;&gt;-->
-<!--						&lt;!&ndash;<version>5.1.46</version>&ndash;&gt;-->
-<!--					&lt;!&ndash;</dependency>&ndash;&gt;-->
-<!--				&lt;!&ndash;</dependencies>&ndash;&gt;-->
-<!--			&lt;!&ndash;</plugin>&ndash;&gt;-->
-
-
-<!--		</plugins>-->
-<!--	</build>-->
+    </build>
 </project>
